# mali_ba

./: .gitignore  CMakeLists.txt  OPEN_SPIEL_EDITS.txt  board_adapter.cc  board_adapter.h  board_config.cc  board_config.h  board_config_readme.md  example_board.cc  example_board2.cc  flex_board.cc  flex_board.h  hex_grid.h  mali_ba.cc  mali_ba.h  mali_ba_board.cc  mali_ba_board.h  mali_ba_observer.cc  mali_ba_observer.h  mali_ba_test.cc  symlinks_setup.sh
_gsdata_/: _file_state_v4._gs  _insync_v4.gsl
docs/: developer_guide.md
open_spiel/examples/: CMakeLists.txt
open_spiel/games/: CMakeLists.txt
open_spiel/games/mali_ba/: commands.txt  hex_grid.h  mali_ba.ini  mali_ba_common.cc  mali_ba_common.h  mali_ba_game.cc  mali_ba_game.h  mali_ba_observer.cc  mali_ba_observer.h  mali_ba_state.h  mali_ba_state_core.cc  mali_ba_state_display.cc  mali_ba_state_moves.cc  mali_ba_state_serialize.cc  mali_ba_state_setup.cc  mali_ba_state_trade.cc  mali_ba_test.cc
open_spiel/games/mali_ba/non-code_docs/: HowToTrain.md  ImplementCentralRulesSwitching.md  RemoveBoardConfigRefactor.md  SwitchToINIFile.md  analyze.py  basic_tests.cc.txt  commands.txt  current_output.txt  mk_source_txt.sh  source.txt
open_spiel/python/: CMakeLists.txt
open_spiel/python/games/: __init__.py  cmd.gdb  output.txt
open_spiel/python/games/mali_ba/: DEVELOPMENT.md  README.md  __init__.py  config.py  dev_config.py  main.py  setup.py  states.txt  train_mali_ba.py  training_utils.py
open_spiel/python/games/mali_ba/classes/: __init__.py  (+2 more)
open_spiel/python/pybind11/: games_mali_ba.cc  games_mali_ba.h
(+12 files in other folders)
